Website Inst Update

--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
 div.WordSection1
 	{page:WordSection1;} 
 --> 
-<h6>Please start by inserting the USB drive into the
+<h6>Thank you for your purchase. Please start by inserting the USB drive into the
 destination PC, you’ll need to&nbsp;set the boot order&nbsp;so that the
 computer loads the operating system from a different location—in this case,
 from the USB instead of from the hard drive. To do this, you need to access the
 boot menu on startup. When booting your computer, press the appropriate key to
 open the&nbsp;BIOS or UEFI&nbsp;controls. The key that you need to press
-depends on your computer, but it’s usually F11 or F12. </h6>
+depends on your computer, but it’s usually F11 or F12. Please also note that it can take up to 3 minutes 
+for the installation to boot from the USB.</h6>
         <h6 class="u-text u-text-4"><!--
  /* Font Definitions */
  @font-face
@@ -192,42 +193,40 @@ options, and then click the option that you want to select it. </h6>
     <section class="u-clearfix u-section-4" id="sec-f69e">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-default u-image-1" src="images/image8.png" alt="" data-image-width="567" data-image-height="395">
-        <h5 class="u-align-center u-text u-text-default u-text-1"> You’ll briefly see a screen that lets you know that the setup is starting. After that, the Windows Setup window will appear. Here,&nbsp;enter&nbsp;the product key in the text box if you have one. If you&nbsp;<i>don’t</i>&nbsp;have a product key, then you can&nbsp;still run a limited version of Windows 10&nbsp;that works—you’ll just need to enter a product key later to unlock everything.
+        <h5 class="u-align-center u-text u-text-default u-text-1"> You’ll briefly see a loading screen that lets you know that the setup is starting. After that, the Windows Setup window will appear. Here,&nbsp;enter&nbsp;the product key in the text box, this can be found in the sealed envelope. If there are any issues with the license key please contact us.
         </h5>
       </div>
     </section>
     <section class="u-clearfix u-section-5" id="sec-803d">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
         <img class="u-image u-image-default u-image-1" src="images/image9.png" alt="" data-image-width="412" data-image-height="240">
-        <h5 class="u-align-center u-text u-text-default u-text-1"> Next, you’ll need to select which Windows 10 version to use. If you have a Windows 10 key, be sure to select the correct Windows 10 version, as keys only work for certain versions (In this case it is Windows 10 Pro). Click the version to select it, and then click “Next.”</h5>
+        <h5 class="u-align-center u-text u-text-default u-text-1"> Next, you’ll need to select which Windows 10 version to use. In this case it is Professional (Pro). Please be sure to select the correct Windows 10 version, as the license key will only work for the Professional version. Click the version to select it, and then click “Next.”</h5>
       </div>
     </section>
     <section class="u-clearfix u-section-6" id="sec-10dd">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-default u-image-1" src="images/image10.png" alt="" data-image-width="578" data-image-height="287">
-        <h5 class="u-text u-text-default u-text-1"> On the next screen, check the box next to “I Accept the License Terms,” and then click “Next.”</h5>
+        <h5 class="u-text u-text-default u-text-1"> On terms of service screen, check the box next to “I Accept the License Terms,” and then click “Next.”</h5>
       </div>
     </section>
     <section class="u-clearfix u-section-7" id="sec-5e21">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-default u-image-1" src="images/image11.png" alt="" data-image-width="547" data-image-height="242">
-        <h5 class="u-align-center u-text u-text-default u-text-1"> The next screen asks you to select which type of installation you want to perform. Since we’re doing a&nbsp;fresh install, click “Custom: Install Windows Only (Advanced).”</h5>
+        <h5 class="u-align-center u-text u-text-default u-text-1"> The next screen asks you to select which type of installation you want to perform. We recommend a fresh install, hence in this case we will choose “Custom: Install Windows Only (Advanced).”</h5>
       </div>
     </section>
     <section class="u-clearfix u-section-8" id="sec-a226">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
         <img class="u-image u-image-default u-image-1" src="images/image12.png" alt="" data-image-width="548" data-image-height="311">
-        <h5 class="u-align-center u-text u-text-default u-text-1"> Next, choose where you want to install Windows 10. If you have a&nbsp;brand new&nbsp;hard drive, it might say “Drive 0 Unallocated Space” under Name. If you have multiple drives, select the drive that you want to install the OS on, and then click “Next.”<br>
+        <h5 class="u-align-center u-text u-text-default u-text-1"> Next, choose where you want to install Windows 10. If you have a&nbsp;brand new&nbsp;hard drive, it might say “Drive 0 Unallocated Space” under Name. If you have multiple drives, select the drive that you want to install Windows on, and then click “Next.”. In some cases the drive may need Formatting before it can be used, please note that this will remove all the data on the drive.<br>
           <br>
-          <br>Finally, the Wizard will begin installing the Windows files. The amount of time that the installation takes depends on the hardware you’re using. Once the Wizard finishes installing the files, your computer will reboot. In some unusual cases, you’ll get stuck in a boot install loop. If this happens, just remove the USB drive, and restart the computer.
-        </h5>
+          <br>Finally, the Wizard will begin installing the Windows files. The amount of time that the installation takes depends on the hardware you’re using. Once the Wizard finishes installing the files, your computer will reboot. In some unusual cases, you’ll get stuck in a boot install loop, this is where your computer keeps booting from the USB and not the hard drive with the freshly installed copy of Windows. If this happens, just remove the USB drive and restart the computer.
+		  <br>
+		  <br>
+		    Once your computer restarts your copy of Windows is ready, simply follow the setup instructions and then the install is complete. If you face any issues during the installation then we'd strongly recommend that you research your specific computer / laptop model followed by "Install Windows from USB", there are often videos online that can guide you through each process, if you're still stuck then please contact us.
+		</h5>
       </div>
     </section>
-    <section class="u-clearfix u-section-9" id="sec-3757">
-      <div class="u-clearfix u-sheet u-sheet-1"></div>
-    </section>
-    
-    
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-8fa7"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Sowel Store eBay</p>
       </div></footer>
