--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Instructions">
     <meta property="og:type" content="website">
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6MP371NTPF"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-6MP371NTPF');
+	</script>
+
   </head>
   <body data-home-page="Instructions.html" data-home-page-title="Instructions" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-8012"><div class="u-clearfix u-sheet u-sheet-1">
         </g></svg>
